@@ -920,6 +920,17 @@
       </component>
     </version>
   </module>
+  <module name="gimmie">
+    <version release="HEAD">
+      <component name="gimmie" dir="gimmie" group="extras">
+        <podir dir="po"/>
+        <potname name="gimmie.pot"/>
+        <branch name="HEAD"/>
+        <regenerate/>
+        <download/>
+      </component>
+    </version>
+  </module>
   <module name="gimp">
     <version release="HEAD">
       <component name="gimp-freetype" dir="gimp-freetype" group="extras">
